--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,10 +1,10 @@
 @mixin buttonStyle() {
+    font-family: "Poppins", sans-serif;
     width: 152px;
     height: 58px;
     border-radius: 10px;
     margin-top: 30px;
     font-size: 23px;
-    padding: 15px 30px;
     gap: 10px;
     background-color: var(--purple);
     color: var(--white);  
@@ -20,7 +20,7 @@
     padding: 0 10% 0 8.8%;
     position: relative;
     margin-bottom: 100px;
-    margin-top: 10%;
+    margin-top: 11%;
     .headline-portfolio {
         display: flex;
         flex-direction: column;
@@ -127,20 +127,12 @@
 }
 
 
-@media only screen and (max-width: 767px) {
-    .headline-portfolio {
-        div {
-            width: 85vw !important;
-        }
-    }
-}
-
 @media only screen and (max-width: 1000px) {
     .portfolio-container {
-        margin-top: 140px;
+        margin-top: 173px;
         .headline-portfolio {
             span {
-                font-size: 45px !important;
+                font-size: 32px !important;
             }
         }
         .project {
@@ -168,7 +160,7 @@
                 .button-right, .button-left {
                     width: 120px;
                     height: 47px;
-                    font-size: 16px;
+                    font-size: 20px;
                     margin: unset !important;
                 }
             }
@@ -184,6 +176,7 @@
         border-radius: 0.694vw !important;
     }
     .portfolio-container {
+        margin-top: 170px;
         .subtext-portfolio {
             font-size: 30px !important;
         }
