--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,74 +12,79 @@
         </div>
     </div>
 
-    <div class="content-right">
-        <form [formGroup]="contactForm" (submit)="sendMail()" #myForm>
-            <div class="formfield">
-                <input type="name" placeholder=" " formControlName="name"
-                    [class.error-border]="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)"
-                    [class.succes-border]="contactForm.get('name')?.valid">
-                <label [class.success-label]="contactForm.get('name')?.valid">Your name</label>
-                <p *ngIf="contactForm.get('name')?.valid && isSubmitted && !emailSent" class="error-box"></p>
-                <p *ngIf="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)" 
-                    class="error-text">Your name should have at least 3 letters
-                </p>
-                <img *ngIf="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)"  
-                    src="assets/img/input-error.png">
-                <img *ngIf="contactForm.get('name')?.valid"  
-                    src="assets/img/input-success.png">
-            </div>
+    <form [formGroup]="contactForm" (submit)="sendMail()" #myForm>
+        <div class="formfield">
+            <input type="name" placeholder=" " formControlName="name"
+                [class.error-border]="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)"
+                [class.succes-border]="contactForm.get('name')?.valid">
+            <label [class.success-label]="contactForm.get('name')?.valid">Your name</label>
 
-            <div class="formfield">
-                <input type="email" placeholder=" " formControlName="email"
-                    [class.error-border]="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)"
-                    [class.succes-border]="contactForm.get('email')?.valid">
-                <label [class.success-label]="contactForm.get('email')?.valid">Your email</label>
-                <p *ngIf="contactForm.get('email')?.valid && isSubmitted" class="error-box"></p>
-                <p *ngIf="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
-                    class="error-text">Your email is not valid
-                </p>
-                <img *ngIf="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
-                    src="assets/img/input-error.png">
-                <img *ngIf="contactForm.get('email')?.valid"  
-                    src="assets/img/input-success.png">
-            </div>
+            <p *ngIf="contactForm.get('name')?.valid && isSubmitted && !emailSent" class="error-box"></p>
+            <p *ngIf="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)" 
+                class="error-text">Your name should have at least 3 letters
+            </p>
+            <img *ngIf="(contactForm.get('name')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('name')?.hasError('minlength') && isSubmitted && !emailSent)"  
+                src="assets/img/input-error.png">
+            <img *ngIf="contactForm.get('name')?.valid"  
+                src="assets/img/input-success.png">
+        </div>
 
-            <div class="formfield">
-                <textarea placeholder=" "  formControlName="message"
-                    [class.error-border]="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)"
-                    [class.succes-border]="contactForm.get('message')?.valid">
-                </textarea>
-                <label [class.success-label]="contactForm.get('message')?.valid">Your message</label>
-                <p *ngIf="contactForm.get('message')?.valid && isSubmitted && !emailSent" class="error-box"></p>
-                <p *ngIf="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)" 
-                    class="error-text">Your message should have at least 20 letters
-                </p>
-                <img *ngIf="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
-                    (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)" 
-                    src="assets/img/input-error.png">
-                <img *ngIf="contactForm.get('message')?.valid"  
-                    src="assets/img/input-success.png">
-            </div>
+        <div class="formfield">
+            <input type="email" placeholder=" " formControlName="email"
+                [class.error-border]="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)"
+                [class.succes-border]="contactForm.get('email')?.valid">
+            <label [class.success-label]="contactForm.get('email')?.valid">Your email</label>
 
-            <div class="button">
-                <button [disabled]="(isSubmitted && emailSent) || (contactForm.invalid && isSubmitted)" type="submit">Send message :)</button>
-            </div>
-        </form>
+            <p *ngIf="contactForm.get('email')?.valid && isSubmitted" class="error-box"></p>
+            <p *ngIf="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
+                class="error-text">Your email is not valid
+            </p>
+            <img *ngIf="(contactForm.get('email')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('email')?.hasError('email') && isSubmitted && !emailSent)" 
+                src="assets/img/input-error.png">
+            <img *ngIf="contactForm.get('email')?.valid"  
+                src="assets/img/input-success.png">
+        </div>
 
-        <div *ngIf="isSubmitted && (emailSent || !emailSent)" class="contact-popup">
-            <span *ngIf="emailSent">Email successfully sent</span>
-            <span *ngIf="!emailSent && contactForm.valid">Email not sent.<br>Please try again later</span>
-        </div> 
-    </div>
+        <div class="formfield">
+            <textarea placeholder=" "  formControlName="message"
+                [class.error-border]="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)"
+                [class.succes-border]="contactForm.get('message')?.valid">
+            </textarea>
+            <label [class.success-label]="contactForm.get('message')?.valid">Your message</label>
+
+            <p *ngIf="contactForm.get('message')?.valid && isSubmitted && !emailSent" class="error-box"></p>
+            <p *ngIf="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)" 
+                class="error-text">Your message should have at least 20 letters
+            </p>
+            <img *ngIf="(contactForm.get('message')?.hasError('required') && isSubmitted && !emailSent) ||
+                (contactForm.get('message')?.hasError('minlength') && isSubmitted && !emailSent)" 
+                src="assets/img/input-error.png">
+            <img *ngIf="contactForm.get('message')?.valid"  
+                src="assets/img/input-success.png">
+        </div>
+
+        <div class="button">
+            <button [disabled]="(isSubmitted && emailSent) || (contactForm.invalid && isSubmitted)" type="submit">Send message</button>
+        </div>
+
+        <div *ngIf="isSubmitted && emailSent" class="popup-bg">
+            <div class="contact-popup">
+                <span *ngIf="emailSent">Email successfully sent</span>
+                <span *ngIf="!emailSent && contactForm.valid">Email not sent.<br>Please try again later</span>
+            </div> 
+        </div>
+    </form>
+    
+    <div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
 </div>
 
-<div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
+
 
