--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     padding: 0 10% 0 8.8%;
     position: relative;
-    margin-top: 10%;
+    margin-top: 11%;
     .skills-icons {
         padding-top: 37px;
         display: flex;
@@ -56,7 +56,7 @@
             border-radius: 10px;
             margin-top: 50px;
             font-size: 23px;
-            padding: 15px 30px;
+            font-family: "Poppins", sans-serif;
             gap: 10px;
             background-color: var(--light-blue);
             color: var(--white);  
@@ -90,7 +90,7 @@
         }
         .my-skills {
             div:nth-child(1) {
-                font-size: 45px !important;
+                font-size: 32px !important;
                 padding: 0 3.32%;
             }
             div:nth-child(2) {
@@ -102,8 +102,8 @@
                 left: 50%;
                 transform: translate(-50%);
                 margin: 0 !important;
+                font-size: 20px;
             }
-            
         }
     }
 }
