--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -83,6 +83,7 @@
         </div>
     </form>
     
+    <img class="shadow"src="assets/img/shadow-footer.png">
     <div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
 </div>
 
