--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,13 +6,15 @@
     height: 200px;
     border-top: 4px solid var(--light-blue);
     color: var(--white);
-    padding: 0 100px 10px 100px;
+    padding: 80px 10%;
+    font-size: 23px;
+    line-height: 120%;
     position: relative;
     background-color: var(--background);
     .content-left {
         img {
-            width: 100px;
-            height: 100px;
+            width: 6.944vw;
+            height: 6.944vw;
             object-fit: contain;
             cursor: pointer;
         }
@@ -26,11 +28,10 @@
             }
         }
     }
-    .content-middle {
-        font-size: 23px;
-    }
     .icons {
         img {
+            width: 2.083vw;
+            height: 2.083vw;
             margin-left: 30px;
             cursor: pointer;
             transition: 0.2s ease-in;
@@ -40,11 +41,48 @@
             } 
         }
     }
-    .shadow {
-        position: absolute;
-        left: 0;
-        bottom: 0px;
-        z-index: -1;
-        overflow: hidden;
+}
+
+@media only screen and (max-width: 1000px) {
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        padding: 50px 5% 100px;
+        gap: 30px;
+        .content-left {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            img {
+                width: 80px;
+                height: 80px;
+            }
+        }
+        .icons {
+            width: 14rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            img {
+                margin-left: unset;
+                width: 6vw !important;
+                height: 6vw !important;
+            }
+        }
     }
+}
+
+@media only screen and (min-width: 2000px) {
+    .footer {
+        .content-left {
+            div {
+                font-size: 30px !important;
+            }
+        }
+        .content-middle {
+            font-size: 30px !important;
+        }
+    }   
 }
