margin between components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="content-left">
         <img (click)="scroll('header')" routerLink="/" src="{{ is.logo }}">
-        <div>Impressum</div>
+        <div>Imprint</div>
     </div>
     <div class="content-middle">
         <div>&copy; Denise Siegl 2023</div>
