--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -19,7 +19,7 @@
     flex-direction: column;
     padding: 0 10% 0 8.8%;
     position: relative;
-    margin-bottom: 100px;
+    margin-bottom: 11%;
     margin-top: 11%;
     .headline-portfolio {
         display: flex;
