--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,7 +3,7 @@
     align-items: center;
     position: relative;
     padding: 0 0 0 11%;
-    margin-top: 11%;
+   /*  margin-top: 11%; */
     div {
         font-family: 'Poppins bold';
         font-size: 6.25vw;
