get offset of element for scroll and highlight links

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -36,10 +36,10 @@
     </div>
 </div>
 
-<div class="about-me-content" #myaboutme>
+<div class="about-me-content" #myaboutme id="aboutMe">
     <img class="scroll-down-shadow" src="assets/img/scroll-down-shadow.png">
     <div class="content-left">
-        <div id="aboutMe" class="header-about-me-content">About Me</div>
+        <div class="header-about-me-content">About Me</div>
         <div class="present-text">Hi, I am Denise. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores, dolores ea commodi voluptatem, temporibus dolore expedita, perspiciatis voluptas minus possimus dignissimos</div>
         <div class="subinfo-first">
             <img src="assets/img/idea.png">
