--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -84,7 +84,9 @@
     </form>
     
     <img class="shadow"src="assets/img/shadow-footer.png">
-    <div (click)="scroll('header')" routerLink="/" class="arrow-up"></div>
+    <a href="#">
+        <div class="arrow-up"></div>
+    </a>
 </div>
 
 
