--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -4,6 +4,7 @@
     position: relative;
     padding: 0 0 0 11%;
    /*  margin-top: 11%; */
+   scroll-margin-top: 170px;
     div {
         font-family: 'Poppins bold';
         font-size: 6.25vw;
@@ -236,6 +237,7 @@
 
 @media only screen and (max-width: 1000px) {
     .contact {
+        scroll-margin-top: 100px;
         div {
             font-size: 32px !important;
         }
@@ -286,6 +288,7 @@
     }
     .contact {
         margin-top: 186px;
+        scroll-margin-top: 250px;
     }
     .contact-content {
         .content-left {
