--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,8 @@
-<div class="portfolio-container" #myportfolio>
+<div class="portfolio-container" #myportfolio id="portfolio">
     <div class="headline-portfolio">
         <div></div>
         <!-- <img src="assets/img/line-left-portfolio.png"> -->
-        <span id="portfolio">Portfolio</span>
+        <span>Portfolio</span>
     </div>
 
     <div class="subtext-portfolio">This page is a sample of my work - please feel free to try them out.</div>
