--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -21,6 +21,7 @@
     position: relative;
     margin-bottom: 11%;
     margin-top: 11%;
+    scroll-margin-top: 180px;
     .headline-portfolio {
         display: flex;
         flex-direction: column;
@@ -130,6 +131,7 @@
 @media only screen and (max-width: 1000px) {
     .portfolio-container {
         margin-top: 173px;
+        scroll-margin-top: 100px;
         .headline-portfolio {
             span {
                 font-size: 32px !important;
@@ -177,6 +179,7 @@
     }
     .portfolio-container {
         margin-top: 170px;
+        scroll-margin-top: 250px;
         .subtext-portfolio {
             font-size: 30px !important;
         }
