--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,8 @@
 <div class="footer">
     <div class="content-left">
-        <img (click)="scroll('header')" routerLink="/" src="{{ is.logo }}">
+        <a href="#">
+            <img src="{{ is.logo }}">
+        </a>
         <div>Imprint</div>
     </div>
     <div class="content-middle">
