--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -131,7 +131,7 @@
 @media only screen and (max-width: 1000px) {
     .portfolio-container {
         margin-top: 173px;
-        scroll-margin-top: 100px;
+        scroll-margin-top: 20vw;
         .headline-portfolio {
             span {
                 font-size: 32px !important;
@@ -179,7 +179,7 @@
     }
     .portfolio-container {
         margin-top: 170px;
-        scroll-margin-top: 250px;
+        scroll-margin-top: 199px;
         .subtext-portfolio {
             font-size: 30px !important;
         }
