--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -237,7 +237,7 @@
 
 @media only screen and (max-width: 1000px) {
     .contact {
-        scroll-margin-top: 100px;
+        scroll-margin-top: 20vw;
         div {
             font-size: 32px !important;
         }
@@ -288,7 +288,7 @@
     }
     .contact {
         margin-top: 186px;
-        scroll-margin-top: 250px;
+        scroll-margin-top: 199px;
     }
     .contact-content {
         .content-left {
