--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -86,7 +86,7 @@
 @media only screen and (max-width: 1000px) {
     .my-skills-container {
         flex-direction: column-reverse;
-        scroll-margin-top: 100px;
+        scroll-margin-top: 20vw;
         .skills-icons {
             justify-content: space-evenly;
         }
@@ -123,7 +123,7 @@
         }
     }
     .my-skills-container {
-        scroll-margin-top: 270px;
+        scroll-margin-top: 199px;
         .skills-icons {
             .icons {
                 img {
