edit highlight links in responsiv menu, allowed scroll body by open nav-responsiv

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
     <div class="content-left">
         <a href="#">
             <img src="{{ is.logo }}">
@@ -13,4 +13,4 @@
             <img  src="{{ icon.image }}">
         </a>
     </div>
-</div>
+</footer>
