--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,20 +2,18 @@
     <a href="#">
         <img src="{{ is.logo }}">
     </a>
-   
-    <nav [class.nav-responsiv-menu]="navResponsiv.classList.contains('open')">
+    <nav class="navBar" [class.active]="isMenuOpen">
         <a href="#aboutMe" [class.active]="isActiveAbout"  (click)="closeMenu()">About me</a>
         <a href="#skills" [class.active]="isActiveSkills" (click)="closeMenu()">Skills</a>
         <a href="#portfolio" [class.active]="isActiveMyWork" (click)="closeMenu()">Portfolio</a>
-        <a href="#contact"  [class.active]="isActiveContact" (click)="closeMenu()">Contact
-        </a>
+        <a href="#contact"  [class.active]="isActiveContact" (click)="closeMenu()">Contact</a>
+        <!-- <span class="active-nav"></span> -->
     </nav>
 
-    <div (click)="navResponsiv.classList.toggle('open'); toggleMenu()" class="nav-responsiv" #navResponsiv>
+    <div (click)="navResponsiv.classList.toggle('open'); toggleMenu()" class="nav-icon-responsiv" #navResponsiv>
         <span></span>
         <span></span>
         <span></span>
         <span></span>
     </div>
-
 </header>
