--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -50,7 +50,7 @@ header {
     color: var(--light-blue)!important;
 }
 
-.nav-responsiv {
+.nav-icon-responsiv {
     display: none;
     width: 40px;
     height: 37px;
@@ -99,72 +99,45 @@ header {
     }
 }
 
+
 @media (max-width: 856px) {
     header {
         padding: 1rem 9%;
         height: 40px;
-        nav {
-            display: none;
-           
-        }
-        .nav-responsiv {
+        .nav-icon-responsiv {
             display: flex;
         }
         img {
             width: 60px;
             height: 60px;
         }
-        .nav-responsiv-menu {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+        .navBar {
             position: absolute;
-            top: 0px;
-            left: 0px;
-            right: 0px;
+            top: 0;
+            right: -100%;
             width: 100%;
             height: 100vh;
             z-index: -1;
             background-color: var(--background);
-            animation: openMenu .3s linear;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            transition: all 225ms ease-in-out;
+            &.active {
+                right: 0;
+                transition-delay: 0s;
+            }
             a {
-                color: white;
-                text-decoration: none;
+                display: block;
                 font-size: 2rem;
                 margin: 2rem 0;
-            }
+            }  
         }
-        .close-nav-responsiv-animation {
-            /* display: flex; */
-           /*  position: absolute;
-            bottom: 0px;
-            top: 79px;
-            left: 0px;
-            right: -100%;
-            width: 100%;
-            height: 100vh;
-            background-color: var(--background); */
-            animation: closeMenu .3s linear;
+        .active::after {
+            display: none;
         }
-    }
 
-    @keyframes openMenu {
-        from {
-          transform: translateX(100%);
-        }
-        to {
-          transform: translateX(0%);
-        }
-    }
-
-    @keyframes closeMenu {
-        from {
-          transform: translateX(0%);
-        }
-        to {
-          transform: translateX(100%);
-        }
     }
 }
 
