--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,23 +8,22 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #141D2F;
-    max-width: 100vw;
-    width: 100vw;
+    max-width: 100%;
+    width: 100%;
     overflow-x: hidden;
 }
 
 *::-webkit-scrollbar {
-        width: 8px;
-    }
+    width: 8px;
+}
 
-    *::-webkit-scrollbar-track {
-        background: transparent;
-    }
+*::-webkit-scrollbar-track {
+    background: transparent;
+}
 
-    *::-webkit-scrollbar-thumb {
-        background-color: #12f7ff;
-    }
-
+*::-webkit-scrollbar-thumb {
+    background-color: #12f7ff;
+}
 
 @font-face {
     font-family: 'Poppins';
@@ -50,5 +49,4 @@ body {
     --green: #70E61C;
     --turquoise: #1CDAE6;
 }
-
 
