animate scroll about-me-section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -30,8 +30,9 @@
         </div>
 
         <div class="scroll">
-            <p class="scroll-info">Scroll down</p>
-            <img src="assets/img/arrow-down.png">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
 </div>
