--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -11,7 +11,9 @@
             <img class="line-my-skills" src="assets/img/line-my-skills.png">
         </div>
         <div>I have gained experience in building projects with various front end technologies and concepts.</div>
-        <button (click)="scroll('contact')" routerLink="/contact">Get in touch</button>
+        <button>
+            <a href="#contact">Get in touch</a>
+        </button>
     </div>
     <img class="shadow-skills" src="assets/img/shadow-skills.png">
 </div>
