--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -74,15 +74,19 @@
                 height: 58px;
                 border-radius: 10px;
                 margin-top: 50px;
-                font-size: 23px;
-                font-family: "Poppins", sans-serif;
                 gap: 10px;
                 background-color: var(--light-blue);
-                color: var(--white);  
                 z-index: 1;
                 cursor: pointer;
                 transition: 0.2s ease-in;
                 border: none;
+                a {
+                    font-size: 23px;
+                    font-family: "Poppins", sans-serif;
+                    color: var(--white);  
+                    text-decoration: none;
+                    cursor: pointer;
+                }
                 &:hover {
                     background-color: var(--purple);
                     width: 185px;
@@ -119,28 +123,27 @@
             justify-content: space-around;
             z-index: 2;
             width: 35vw;
-            img {
-                cursor: pointer;
+            a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 40px;                ;
+                height: 40px;
+                background: transparent;
+                border: 1px solid var(--purple);
+                box-shadow: 0 0 .8rem #bc5cf8;
+                border-radius: 5px;
                 transition: 0.2s ease-in;
-                width: 2.083vw;
-                height: 2.083vw;
+                cursor: pointer;
                 &:hover {
                     transform: scale(1.5);
                     transition: 0.2s ease-in;
                 }
-            }
-            p {
-                display: flex;
-                justify-content: center;
-                align-items: center;
                 img {
-                    content:url("/assets/img/email-image.png");
-                    width: 23vw;
-                    padding-bottom: 4px;
-                    &:hover {
-                        transform: unset;
-                        transition: unset;
-                    }
+                    filter: brightness(0) saturate(100%) invert(83%) sepia(45%) saturate(4835%) hue-rotate(208deg) brightness(99%) contrast(150%);                    
+                    cursor: pointer;
+                    width: 32px;
+                    height: 32px;
                 }
             }
         }  
@@ -302,8 +305,10 @@
                 }
                 button {
                     margin-top: 29% !important;
-                    font-size: 20px;
                     padding: 15px 30px;
+                    a {
+                        font-size: 20px;
+                    }
                 }
             }
         }
@@ -319,20 +324,13 @@
                 width: 57vw !important;
                 justify-content: space-evenly !important;
                 margin-left: 8vw;
-                p {
+                a {
+                    width: 30px !important;
+                    height: 30px !important;
                     img {
-                        content:url("/assets/img/email.png") !important;
-                        width: 6vw !important;
-                        height: 6vw !important;
-                        &:hover {
-                            transform: scale(1.5) !important;
-                            transition: 0.2s ease-in !important;
-                        }
+                        width: 24px !important;
+                        height: 24px !important;
                     }
-                }
-                img {
-                    width: 6vw !important;
-                    height: 6vw !important;
                 }
             }
             .scroll  {
@@ -374,14 +372,26 @@
     button {
         width: 11.458vw !important;
         height: 4.028vw !important;
-        font-size: 1.597vw !important;
         border-radius: 0.694vw !important;
+        a {
+            font-size: 1.597vw !important;
+        }
         &:hover {
             width: 12.847vw !important;
             height: 4.722vw !important;
         }
     }
     .info-content {
+        .info-icons {
+            a {
+                width: 70px !important;
+                height: 70px !important;
+                img {
+                    width: 63px !important;
+                    height: 63px !important;
+                }
+            }
+        }
         .scroll {
             span {
                 border-bottom: 5px solid white !important;
