--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -29,16 +29,33 @@
         }
     }
     .icons {
-        img {
-            width: 2.083vw;
-            height: 2.083vw;
-            margin-left: 30px;
-            cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        z-index: 2;
+        width: 35vw;
+        a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;                ;
+            height: 40px;
+            background: transparent;
+            border: 1px solid var(--purple);
+            box-shadow: 0 0 .8rem #bc5cf8;
+            border-radius: 5px;
             transition: 0.2s ease-in;
+            cursor: pointer;
             &:hover {
                 transform: scale(1.5);
                 transition: 0.2s ease-in;
-            } 
+            }
+            img {
+                filter: brightness(0) saturate(100%) invert(83%) sepia(45%) saturate(4835%) hue-rotate(208deg) brightness(99%) contrast(150%);                    
+                cursor: pointer;
+                width: 32px;
+                height: 32px;
+            }
         }
     }
 }
@@ -61,14 +78,16 @@
             }
         }
         .icons {
-            width: 14rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            img {
-                margin-left: unset;
-                width: 6vw !important;
-                height: 6vw !important;
+            width: 57vw !important;
+            justify-content: space-evenly !important;
+            margin-left: 8vw;
+            a {
+                width: 30px !important;
+                height: 30px !important;
+                img {
+                    width: 24px !important;
+                    height: 24px !important;
+                }
             }
         }
     }
@@ -83,6 +102,16 @@
         }
         .content-middle {
             font-size: 30px !important;
+        }
+        .icons {
+            a {
+                width: 70px !important;
+                height: 70px !important;
+                img {
+                    width: 63px !important;
+                    height: 63px !important;
+                }
+            }
         }
     }   
 }
