--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -56,15 +56,18 @@
             height: 58px;
             border-radius: 10px;
             margin-top: 50px;
-            font-size: 23px;
-            font-family: "Poppins", sans-serif;
             gap: 10px;
             background-color: var(--light-blue);
-            color: var(--white);  
             z-index: 1;
             cursor: pointer;
             transition: 0.2s ease-in;
             border: none;
+            a {
+                font-size: 23px;
+                font-family: "Poppins", sans-serif;
+                color: var(--white);  
+                text-decoration: none;
+            }
             &:hover {
                 background-color: var(--purple);
                 width: 220px;
@@ -104,7 +107,9 @@
                 left: 50%;
                 transform: translate(-50%);
                 margin: 0 !important;
-                font-size: 20px;
+                a {
+                    font-size: 20px;
+                }
             }
         }
     }
@@ -115,8 +120,10 @@
     button {
         width: 11.458vw !important;
         height: 4.028vw !important;
-        font-size: 1.597vw !important;
         border-radius: 0.694vw !important;
+        a {
+            font-size: 1.597vw !important;
+        }
         &:hover {
             width: 12.847vw !important;
             height: 4.722vw !important;
