--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -12,6 +12,9 @@
     position: relative;
     background-color: var(--background);
     .content-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         img {
             width: 6.944vw;
             height: 6.944vw;
@@ -98,6 +101,12 @@
         .content-left {
             div {
                 font-size: 30px !important;
+                margin-bottom: 20px !important;
+                padding-bottom: 3.9px;
+                &:hover {
+                    border-bottom: 5px solid var(--light-blue);
+                    margin-bottom: 15px !important;
+                }
             }
         }
         .content-middle {
