add imprint component with routerlink

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
         <a href="#">
             <img src="{{ is.logo }}">
         </a>
-        <div>Imprint</div>
+        <div routerLink="/imprint">Imprint</div>
     </div>
     <div class="content-middle">
         <div>&copy; Denise Siegl 2023</div>
