begin checkbox privacy police

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -71,6 +71,17 @@
                 src="assets/img/input-success.png">
         </div>
 
+        <div class="checkbox-pivacy-policy">
+            <div class="checkbox-text">
+                <input type="checkbox" (change)="toggleChecked()">
+                <span>I've read the
+                    <span class="privacy-link" routerLink="/imprint">privacy policy</span> 
+                    and agree to the processing of my data as outlined.
+                </span>
+            </div>
+            <p *ngIf="(isSubmitted && contactForm.valid) && !isChecked" class="error-text">Please accept the privacy policy.</p>
+        </div>
+
         <div class="button">
             <button [disabled]="(isSubmitted && emailSent) || (contactForm.invalid && isSubmitted)" type="submit">Send message</button>
         </div>
