--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -50,24 +50,15 @@
         align-items: center;
         flex-direction: column;
         width: 50%;
-        height: 504px;
+        /* height: 440px; */
+        height: 510px;
         justify-content: space-between;
         position: relative;
         .formfield {
             width: 100%;
             display: flex;
             flex-direction: column;
-            position: relative;   
-            .error-box {
-                /* height: 28px; */
-                height: 10px;
-                margin: 0;
-            }         
-            .error-text {
-                font-size: 12px;
-                color: var(--red);
-                margin: 1px 0 10px 5px;
-            }
+            position: relative;        
             .error-border {
                 border: 2px solid var(--red);
             }
@@ -148,12 +139,32 @@
             pointer-events: none;
             background-color: var(--background);
         }
-        .checkbox-pivacy-policy {
+        .checkbox-privacy-policy {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            margin-top: -23px;
             .checkbox-text {
                 display: flex;
-                input {
-                    width: 18px;
-                    height: 18px;
+                align-items: flex-start;
+                .checkbox {
+                    height: 15px;
+                    width: 15px;
+                    min-width: 15px;
+                    background-color: transparent;
+                    border: 2px solid var(--purple);
+                    border-radius: 5px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    cursor: pointer;
+                    .checkbox-selected {
+                        content: url(../../assets/img/check.png);
+                        filter: brightness(0) saturate(100%) invert(83%) sepia(45%) saturate(4835%) hue-rotate(208deg) brightness(99%) contrast(150%);    
+                        width: 20px; 
+                        margin: -5px;    
+                        cursor: pointer;           
+                    }
                 }
                 span {
                     color: var(--white);
@@ -169,15 +180,6 @@
                         border-bottom: 1px solid var(--purple);
                     }
                 }
-            }
-            .error-box {
-                height: 10px;
-                margin: 0;
-            }  
-            .error-text {
-                font-size: 12px;
-                color: var(--red);
-                margin: 1px 0 10px 5px;
             }
         }
         .button {
@@ -205,6 +207,7 @@
             } 
             button:disabled {
                 cursor: default;
+                opacity: 0.5;
             }
         }
         .popup-bg {
@@ -212,7 +215,8 @@
             position: absolute;
             left: 0;
             right: 0;
-            bottom: 34%;
+            /* bottom: 34%; */
+            bottom: 15%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -230,6 +234,15 @@
                 }
             }
         }
+    }
+    .error-box {
+        height: 28px;
+        margin: 0;
+    }    
+    .error-text {
+        font-size: 12px;
+        color: var(--red);
+        margin: 1px 0 10px 5px;
     }
     .shadow {
         position: absolute;
@@ -342,7 +355,7 @@
                     height: 49px !important;
                 }  
                 .error-text {
-                    font-size: 25px !important;
+                    font-size: 20px !important;
                 }
                 img {
                     right: 20px;
@@ -356,6 +369,14 @@
             textarea {
                 padding: 30px 75px 30px 25px !important;
                 line-height: 46px !important;
+            }
+            .checkbox-privacy-policy {
+                .checkbox-text {
+                    align-items: center;
+                    span {
+                        font-size: 20px;
+                    }
+                }
             }
             .popup-bg {
                 .contact-popup {
